syntax = "proto3";

package com.netcracker.nrm.api.test.hub.model;

option go_package = "github.com/dgodyna/protoc-gen-resource/pkg/deepcopy/testdata/protos";


// available scalar types
//
// comment line1
// comment line2
message ABitOfScalars {
    double double_type = 1;
    float float_type = 2;
    int32 int32_type = 3;
    int64 int64_type = 4;
    uint32 uint32_type = 5;
    uint64 uint64_type = 6;
    sint32 sint32_type = 7;
    sint64 sint64_type = 8;
    fixed32 fixed32_type = 9;
    fixed64 fixed64_type = 10;
    sfixed32 sfixed32_type = 11;
    sfixed64 sfixed64_type = 12;
    bool bool_type = 13;
    string string_type = 14;
    bytes bytes_type = 15;
}
